Fix layout and add overflow-x hidden

--- a/svelte/src/app.css
+++ b/svelte/src/app.css
@@ -29,4 +29,5 @@
 
 html{
     overflow-y: scroll;
+    overflow-x: hidden;
 }
